--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,3 +1,55 @@
+/*//INDEX HTML : CORY*/
+
+html {
+    background:url('../images/backgroundimage2.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family: 'Shadows Into Light', cursive;
+}
+
+h1 {
+  font-family: 'Shadows Into Light', cursive;
+  color: white;
+  text-align: center;
+  font-size: 200px;
+  padding: 100px;
+  font-weight: bold;
+
+}
+
+.footer{ 
+       position: fixed;        
+       bottom: 0px; 
+       width: 100%;
+       height: 100px;
+  } 
+
+
+h2, h3 {      
+ 
+  text-align: left;
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 20px;
+  margin-bottom: 0;
+  font-weight: bold;
+  padding: 20px;
+}
+
+
+h4 {
+  position: fixed;
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 50px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  padding: 15px;      
+  bottom: 0px; 
+}
+
+/*//ANI*/
+
 *{
   margin:0;
   padding: 0;
