--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,7 +1,7 @@
 /*//INDEX HTML : CORY*/
 
-html {
-    background:url('../images/backgroundimage2.jpg') no-repeat center center fixed;
+.index {
+    background:url('../images/one.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -13,40 +13,139 @@ h1 {
   font-family: 'Shadows Into Light', cursive;
   color: white;
   text-align: center;
-  font-size: 200px;
-  padding: 100px;
+  font-size: 175px;
+  margin-top: 100px;
+  margin-bottom: 75px;
   font-weight: bold;
 
 }
+
 
 .footer{ 
        position: fixed;        
        bottom: 0px; 
        width: 100%;
-       height: 100px;
+       height: 60px;
   } 
 
 
-h2, h3 {      
- 
+h2 {
   text-align: left;
   font-family: 'Shadows Into Light', cursive;
-  font-size: 20px;
-  margin-bottom: 0;
+  font-size: 25px;
   font-weight: bold;
-  padding: 20px;
+  color: white;
 }
 
+h3 {      
+  position: fixed;
+  text-align: left;
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+
+
+/*//MEET THE TEAM : CORY*/
+
+.meetTheTeam {
+    background:url('../images/concert.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family: 'Shadows Into Light', cursive;
+
+}
 
 h4 {
-  position: fixed;
   font-family: 'Shadows Into Light', cursive;
-  font-size: 50px;
-  margin-bottom: 20px;
+  color: white !important;
+  text-align: center;
+  font-size: 100px !important;
+  padding: 20px;
   font-weight: bold;
-  padding: 15px;      
-  bottom: 0px; 
 }
+
+#team {
+  margin-top: 50px;
+  font-family: 'Shadows Into Light', cursive;
+  height: 100% !important;
+  width: 100% !important;
+  padding: 50px;
+}
+
+p {
+  font-family: 'Shadows Into Light', cursive;
+  text-align: center;
+  font-size: 30px !important;
+  font-weight: bold;
+}
+
+b {
+  text-align: center;
+  font-size: 30px !important;
+  color: white;
+}
+
+.div1 {
+    float: left;
+    text-align:left;
+}
+
+.div2 {
+    float:right;
+    text-align:right;
+    margin-right: 30px;
+}
+
+.mTTFooter,
+.gameFooter {
+  position: fixed !important;        
+  bottom: 0px !important; 
+  width: 100%;
+  height: 50px !important;
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 25px;
+  font-weight: bold;
+  color: white !important;
+  padding: 25px;
+  margin-bottom: 10px;
+ } 
+
+/*//GAME PAGE : CORY*/
+
+.game {
+    background:url('../images/three.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family: 'Shadows Into Light', cursive;
+    color: white !important;
+}
+
+h5 {
+  font-family: 'Shadows Into Light', cursive;
+  text-align: center;
+  font-size: 100px !important;
+  font-weight: bold !important;
+}
+
+p {
+  font-family: 'Shadows Into Light', cursive;
+  text-align: center;
+  font-size: 40px !important;
+  font-weight: bold !important;
+}
+
+.row2 {
+  height: 100px;
+  width: 100%;
+  text-align: center;
+}
+
 
 /*//ANI*/
 
