--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -61,13 +61,20 @@ h3 {
 }
 
 .mainimg {
-  text-align: center;
-  height: 100px;
-  width: 100px;
-  position: absolute;
-  z-index: 4px;
+  height: 500px !important;
+  width: 500px !important;
+  position: absolute !important;
+  content: center !important;
+  padding-left: 575px !important;
 }
 
+.mainimg img {
+  height:100% !important;
+  width:100% !important;
+  align-content: center !important;
+  border-radius: 10px;
+
+}
 
 /*//MEET THE TEAM : CORY*/
 
@@ -91,6 +98,14 @@ h4 {
   font-weight: bold !important;
 }
 
+.meetTheTeam span {
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.mTTFooter span {
+  padding:5px;
+}
 
 #team {
   margin-top: 50px;
@@ -100,18 +115,22 @@ h4 {
   padding: 50px;
 }
 
-p {
+.team p {
   font-family: 'Shadows Into Light', cursive;
   text-align: center;
-  font-size: 30px !important;
+  font-size: 20px !important;
   font-weight: bold;
   color: white;
+  background-color: grey;
+  border-radius: 10px;
+  padding: 10px;
 }
 
-b {
+.team b {
   text-align: center !important;
   font-size: 30px !important;
   color: white;
+  border-radius: 10px !important;
 }
 
 .div1 {
@@ -143,6 +162,7 @@ b {
   font-family: 'Shadows Into Light', cursive;
   font-weight: bold !important;
   font-size: 20px !important;
+  background-color:#cc0000 !important;
  }
 
 /*//GAME PAGE : CORY*/
