--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -76,6 +76,12 @@ h3 {
 
 }
 
+.index p {
+  color: white;
+  font-size: 40px !important;
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: bold;
+}
 /*//MEET THE TEAM : CORY*/
 
 .meetTheTeam {
@@ -182,17 +188,30 @@ h5 {
   text-align: center;
   font-size: 100px !important;
   font-weight: bold !important;
-  background-color: #9368B7;
+  background-color: #aa3e98;
   border-radius: 15px;
   margin-bottom: 20px;
   width: 400px;
 }
 
-p {
+.game p {
   font-family: 'Shadows Into Light', cursive;
   text-align: center;
   font-size: 40px !important;
   font-weight: bold !important;
+  background-color: #9368b7;
+  border-radius: 5px;
+  width: 120px;
+}
+
+h6 {
+  font-family: 'Shadows Into Light', cursive;
+  text-align: center;
+  font-size: 40px !important;
+  font-weight: bold !important;
+  background-color: #9368b7;
+  border-radius: 5px;
+  width: 250px;
 }
 
 .row2 {
@@ -206,13 +225,24 @@ p {
   text-align: center;
   font-size: 20px !important;
   font-weight: bold !important;
-  background-color: #9368B7;
+  background-color: #aa3e98;
   border-radius: 10px;
   margin-bottom: 20px;
   width: 65px;
 
 }
 
+/*.guess {
+  height: 400px !important;
+  width: 400px !important;
+  background-color:#84c7d0;
+  border-radius:10px;
+  
+}*/
+
+/*.timer {
+
+}*/
 /*//ANI*/
 
 *{
